@@ -27,54 +27,63 @@
  */
 package org.hisp.dhis.programrule.engine;
 
-import static com.google.common.base.Preconditions.checkNotNull;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.ASSIGN;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.CREATEEVENT;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.DISPLAYKEYVALUEPAIR;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.DISPLAYTEXT;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.ERRORONCOMPLETE;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.HIDEFIELD;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.HIDEOPTION;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.HIDEOPTIONGROUP;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.HIDEPROGRAMSTAGE;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.HIDESECTION;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SCHEDULEMESSAGE;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SENDMESSAGE;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SETMANDATORYFIELD;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SHOWERROR;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SHOWOPTIONGROUP;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.SHOWWARNING;
+import static org.hisp.dhis.programrule.ProgramRuleActionType.WARNINGONCOMPLETE;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.ATTRIBUTE_TYPE;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.CONTENT;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.FIELD;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.LOCATION;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.NOTIFICATION;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.PROGRAM_STAGE;
+import static org.hisp.dhis.programrule.engine.RuleActionKey.PROGRAM_STAGE_SECTION;
 import static org.hisp.dhis.rules.models.AttributeType.DATA_ELEMENT;
 import static org.hisp.dhis.rules.models.AttributeType.TRACKED_ENTITY_ATTRIBUTE;
 
-import com.google.common.base.Function;
-import com.google.common.collect.ImmutableMap;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import kotlinx.datetime.Instant;
+import kotlinx.datetime.LocalDateTime;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.constant.ConstantService;
-import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.i18n.I18nManager;
 import org.hisp.dhis.program.Enrollment;
 import org.hisp.dhis.program.Event;
 import org.hisp.dhis.programrule.ProgramRule;
 import org.hisp.dhis.programrule.ProgramRuleAction;
-import org.hisp.dhis.programrule.ProgramRuleActionType;
 import org.hisp.dhis.programrule.ProgramRuleService;
 import org.hisp.dhis.programrule.ProgramRuleVariable;
 import org.hisp.dhis.programrule.ProgramRuleVariableService;
-import org.hisp.dhis.programrule.ProgramRuleVariableSourceType;
-import org.hisp.dhis.rules.DataItem;
-import org.hisp.dhis.rules.ItemValueType;
-import org.hisp.dhis.rules.Option;
+import org.hisp.dhis.rules.api.DataItem;
+import org.hisp.dhis.rules.api.EnvironmentVariables;
+import org.hisp.dhis.rules.api.ItemValueType;
 import org.hisp.dhis.rules.models.AttributeType;
+import org.hisp.dhis.rules.models.Option;
 import org.hisp.dhis.rules.models.Rule;
 import org.hisp.dhis.rules.models.RuleAction;
-import org.hisp.dhis.rules.models.RuleActionAssign;
-import org.hisp.dhis.rules.models.RuleActionCreateEvent;
-import org.hisp.dhis.rules.models.RuleActionDisplayKeyValuePair;
-import org.hisp.dhis.rules.models.RuleActionDisplayText;
-import org.hisp.dhis.rules.models.RuleActionErrorOnCompletion;
-import org.hisp.dhis.rules.models.RuleActionHideField;
-import org.hisp.dhis.rules.models.RuleActionHideProgramStage;
-import org.hisp.dhis.rules.models.RuleActionHideSection;
-import org.hisp.dhis.rules.models.RuleActionScheduleMessage;
-import org.hisp.dhis.rules.models.RuleActionSendMessage;
-import org.hisp.dhis.rules.models.RuleActionSetMandatoryField;
-import org.hisp.dhis.rules.models.RuleActionShowError;
-import org.hisp.dhis.rules.models.RuleActionShowWarning;
-import org.hisp.dhis.rules.models.RuleActionWarningOnCompletion;
 import org.hisp.dhis.rules.models.RuleAttributeValue;
 import org.hisp.dhis.rules.models.RuleDataValue;
 import org.hisp.dhis.rules.models.RuleEnrollment;
@@ -87,9 +96,8 @@ import org.hisp.dhis.rules.models.RuleVariableCurrentEvent;
 import org.hisp.dhis.rules.models.RuleVariableNewestEvent;
 import org.hisp.dhis.rules.models.RuleVariableNewestStageEvent;
 import org.hisp.dhis.rules.models.RuleVariablePreviousEvent;
-import org.hisp.dhis.rules.utils.RuleEngineUtils;
-import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValue;
+import org.hisp.dhis.util.DateUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -97,213 +105,10 @@ import org.springframework.transaction.annotation.Transactional;
  * @author Zubair Asghar
  */
 @Slf4j
+@RequiredArgsConstructor
 @Transactional(readOnly = true)
 @Service("org.hisp.dhis.programrule.engine.ProgramRuleEntityMapperService")
 public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityMapperService {
-  private static final String LOCATION_FEEDBACK = "feedback";
-
-  private static final String LOCATION_INDICATOR = "indicators";
-
-  private final ImmutableMap<ProgramRuleActionType, Function<ProgramRuleAction, RuleAction>>
-      ACTION_MAPPER =
-          new ImmutableMap.Builder<ProgramRuleActionType, Function<ProgramRuleAction, RuleAction>>()
-              .put(
-                  ProgramRuleActionType.ASSIGN,
-                  pra ->
-                      RuleActionAssign.create(
-                          pra.getContent(),
-                          pra.getData(),
-                          getAssignedParameter(pra),
-                          getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.CREATEEVENT,
-                  pra ->
-                      RuleActionCreateEvent.create(
-                          pra.getContent(), pra.getData(), pra.getLocation()))
-              .put(
-                  ProgramRuleActionType.DISPLAYKEYVALUEPAIR,
-                  this::getLocationBasedDisplayRuleAction)
-              .put(ProgramRuleActionType.DISPLAYTEXT, this::getLocationBasedDisplayRuleAction)
-              .put(
-                  ProgramRuleActionType.HIDEFIELD,
-                  pra ->
-                      RuleActionHideField.create(
-                          pra.getContent(), getAssignedParameter(pra), getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.HIDEPROGRAMSTAGE,
-                  pra -> RuleActionHideProgramStage.create(pra.getProgramStage().getUid()))
-              .put(
-                  ProgramRuleActionType.HIDESECTION,
-                  pra -> RuleActionHideSection.create(pra.getProgramStageSection().getUid()))
-              .put(
-                  ProgramRuleActionType.SHOWERROR,
-                  pra ->
-                      RuleActionShowError.create(
-                          pra.getContent(),
-                          pra.getData(),
-                          getAssignedParameter(pra),
-                          getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.SHOWWARNING,
-                  pra ->
-                      RuleActionShowWarning.create(
-                          pra.getContent(),
-                          pra.getData(),
-                          getAssignedParameter(pra),
-                          getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.SETMANDATORYFIELD,
-                  pra ->
-                      RuleActionSetMandatoryField.create(
-                          getAssignedParameter(pra), getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.WARNINGONCOMPLETE,
-                  pra ->
-                      RuleActionWarningOnCompletion.create(
-                          pra.getContent(),
-                          pra.getData(),
-                          getAssignedParameter(pra),
-                          getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.ERRORONCOMPLETE,
-                  pra ->
-                      RuleActionErrorOnCompletion.create(
-                          pra.getContent(),
-                          pra.getData(),
-                          getAssignedParameter(pra),
-                          getAttributeType(pra)))
-              .put(
-                  ProgramRuleActionType.SENDMESSAGE,
-                  pra -> RuleActionSendMessage.create(pra.getTemplateUid(), pra.getData()))
-              .put(
-                  ProgramRuleActionType.SCHEDULEMESSAGE,
-                  pra -> RuleActionScheduleMessage.create(pra.getTemplateUid(), pra.getData()))
-              .build();
-
-  private final ImmutableMap<
-          ProgramRuleVariableSourceType, Function<ProgramRuleVariable, RuleVariable>>
-      VARIABLE_MAPPER =
-          new ImmutableMap.Builder<
-                  ProgramRuleVariableSourceType, Function<ProgramRuleVariable, RuleVariable>>()
-              .put(
-                  ProgramRuleVariableSourceType.CALCULATED_VALUE,
-                  prv ->
-                      RuleVariableCalculatedValue.create(
-                          prv.getName(),
-                          prv.getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          List.of()))
-              .put(
-                  ProgramRuleVariableSourceType.TEI_ATTRIBUTE,
-                  prv ->
-                      RuleVariableAttribute.create(
-                          prv.getName(),
-                          prv.getAttribute().getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          getOptions(prv)))
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_CURRENT_EVENT,
-                  prv ->
-                      RuleVariableCurrentEvent.create(
-                          prv.getName(),
-                          prv.getDataElement().getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          getOptions(prv)))
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_PREVIOUS_EVENT,
-                  prv ->
-                      RuleVariablePreviousEvent.create(
-                          prv.getName(),
-                          prv.getDataElement().getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          getOptions(prv)))
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM,
-                  prv ->
-                      RuleVariableNewestEvent.create(
-                          prv.getName(),
-                          prv.getDataElement().getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          getOptions(prv)))
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE,
-                  prv ->
-                      RuleVariableNewestStageEvent.create(
-                          prv.getName(),
-                          prv.getDataElement().getUid(),
-                          prv.getProgramStage().getUid(),
-                          toMappedValueType(prv),
-                          prv.getUseCodeForOptionSet(),
-                          getOptions(prv)))
-              .build();
-
-  private final ImmutableMap<
-          ProgramRuleVariableSourceType, Function<ProgramRuleVariable, ValueType>>
-      VALUE_TYPE_MAPPER =
-          new ImmutableMap.Builder<
-                  ProgramRuleVariableSourceType, Function<ProgramRuleVariable, ValueType>>()
-              .put(
-                  ProgramRuleVariableSourceType.CALCULATED_VALUE, ProgramRuleVariable::getValueType)
-              .put(
-                  ProgramRuleVariableSourceType.TEI_ATTRIBUTE,
-                  prv -> prv.getAttribute().getValueType())
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_CURRENT_EVENT,
-                  prv -> prv.getDataElement().getValueType())
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_PREVIOUS_EVENT,
-                  prv -> prv.getDataElement().getValueType())
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM,
-                  prv -> prv.getDataElement().getValueType())
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE,
-                  prv -> prv.getDataElement().getValueType())
-              .build();
-
-  private final ImmutableMap<ProgramRuleVariableSourceType, Function<ProgramRuleVariable, DataItem>>
-      DESCRIPTION_MAPPER =
-          new ImmutableMap.Builder<
-                  ProgramRuleVariableSourceType, Function<ProgramRuleVariable, DataItem>>()
-              .put(
-                  ProgramRuleVariableSourceType.TEI_ATTRIBUTE,
-                  prv -> {
-                    TrackedEntityAttribute attribute = prv.getAttribute();
-
-                    return DataItem.builder()
-                        .value(
-                            ObjectUtils.firstNonNull(
-                                attribute.getDisplayName(),
-                                attribute.getDisplayFormName(),
-                                attribute.getName()))
-                        .valueType(getItemValueType(attribute.getValueType()))
-                        .build();
-                  })
-              .put(
-                  ProgramRuleVariableSourceType.CALCULATED_VALUE,
-                  prv ->
-                      DataItem.builder()
-                          .value(ObjectUtils.firstNonNull(prv.getDisplayName(), prv.getName()))
-                          .valueType(getItemValueType(prv.getValueType()))
-                          .build())
-              .put(ProgramRuleVariableSourceType.DATAELEMENT_CURRENT_EVENT, this::getDisplayName)
-              .put(ProgramRuleVariableSourceType.DATAELEMENT_PREVIOUS_EVENT, this::getDisplayName)
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM,
-                  this::getDisplayName)
-              .put(
-                  ProgramRuleVariableSourceType.DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE,
-                  this::getDisplayName)
-              .build();
-
-  // -------------------------------------------------------------------------
-  // Dependencies
-  // -------------------------------------------------------------------------
 
   private final ProgramRuleService programRuleService;
 
@@ -312,22 +117,6 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
   private final ConstantService constantService;
 
   private final I18nManager i18nManager;
-
-  public DefaultProgramRuleEntityMapperService(
-      ProgramRuleService programRuleService,
-      ProgramRuleVariableService programRuleVariableService,
-      ConstantService constantService,
-      I18nManager i18nManager) {
-    checkNotNull(programRuleService);
-    checkNotNull(programRuleVariableService);
-    checkNotNull(constantService);
-    checkNotNull(i18nManager);
-
-    this.programRuleService = programRuleService;
-    this.programRuleVariableService = programRuleVariableService;
-    this.constantService = constantService;
-    this.i18nManager = i18nManager;
-  }
 
   @Override
   public List<Rule> toMappedProgramRules() {
@@ -338,10 +127,7 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
 
   @Override
   public List<Rule> toMappedProgramRules(List<ProgramRule> programRules) {
-    return programRules.stream()
-        .map(this::toRule)
-        .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+    return programRules.stream().map(this::toRule).filter(Objects::nonNull).toList();
   }
 
   @Override
@@ -359,7 +145,7 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
         .filter(Objects::nonNull)
         .map(this::toRuleVariable)
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -371,7 +157,7 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
         prv ->
             itemStore.put(
                 ObjectUtils.firstNonNull(prv.getName(), prv.getDisplayName()),
-                DESCRIPTION_MAPPER.get(prv.getSourceType()).apply(prv)));
+                getDescription(prv)));
 
     // constants
     constantService
@@ -380,28 +166,23 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
             constant ->
                 itemStore.put(
                     constant.getUid(),
-                    DataItem.builder()
-                        .value(
-                            ObjectUtils.firstNonNull(
-                                constant.getDisplayName(),
-                                constant.getDisplayFormName(),
-                                constant.getName()))
-                        .valueType(ItemValueType.NUMBER)
-                        .build()));
+                    new DataItem(
+                        ObjectUtils.firstNonNull(
+                            constant.getDisplayName(),
+                            constant.getDisplayFormName(),
+                            constant.getName()),
+                        ItemValueType.NUMBER)));
 
     // program variables
-    RuleEngineUtils.ENV_VARIABLES
-        .entrySet()
+    EnvironmentVariables.INSTANCE
+        .getENV_VARIABLES()
         .forEach(
-            var ->
+            (key, value) ->
                 itemStore.put(
-                    var.getKey(),
-                    DataItem.builder()
-                        .value(
-                            ObjectUtils.firstNonNull(
-                                i18nManager.getI18n().getString(var.getKey()), var.getKey()))
-                        .valueType(var.getValue())
-                        .build()));
+                    key,
+                    new DataItem(
+                        ObjectUtils.firstNonNull(i18nManager.getI18n().getString(key), key),
+                        value)));
 
     return itemStore;
   }
@@ -429,28 +210,30 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
               .filter(Objects::nonNull)
               .map(
                   attr ->
-                      RuleAttributeValue.create(
+                      new RuleAttributeValue(
                           attr.getAttribute().getUid(), getTrackedEntityAttributeValue(attr)))
-              .collect(Collectors.toList());
+              .toList();
     } else {
       ruleAttributeValues =
           trackedEntityAttributeValues.stream()
               .filter(Objects::nonNull)
               .map(
                   attr ->
-                      RuleAttributeValue.create(
+                      new RuleAttributeValue(
                           attr.getAttribute().getUid(), getTrackedEntityAttributeValue(attr)))
-              .collect(Collectors.toList());
+              .toList();
     }
-    return RuleEnrollment.create(
+    return new RuleEnrollment(
         enrollment.getUid(),
-        enrollment.getOccurredDate(),
-        enrollment.getEnrollmentDate(),
+        enrollment.getProgram().getName(),
+        LocalDateTime.Companion.parse(DateUtils.getIso8601NoTz(enrollment.getOccurredDate()))
+            .getDate(),
+        LocalDateTime.Companion.parse(DateUtils.getIso8601NoTz(enrollment.getEnrollmentDate()))
+            .getDate(),
         RuleEnrollment.Status.valueOf(enrollment.getStatus().toString()),
         orgUnit,
         orgUnitCode,
-        ruleAttributeValues,
-        enrollment.getProgram().getName());
+        ruleAttributeValues);
   }
 
   @Override
@@ -460,7 +243,7 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
         .filter(
             event -> !(eventToEvaluate != null && event.getUid().equals(eventToEvaluate.getUid())))
         .map(this::toMappedRuleEvent)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -472,13 +255,24 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
     String orgUnit = getOrgUnit(eventToEvaluate);
     String orgUnitCode = getOrgUnitCode(eventToEvaluate);
 
-    return RuleEvent.create(
+    return new RuleEvent(
         eventToEvaluate.getUid(),
         eventToEvaluate.getProgramStage().getUid(),
+        eventToEvaluate.getProgramStage().getName(),
         RuleEvent.Status.valueOf(eventToEvaluate.getStatus().toString()),
-        ObjectUtils.defaultIfNull(
-            eventToEvaluate.getOccurredDate(), eventToEvaluate.getScheduledDate()),
-        eventToEvaluate.getScheduledDate(),
+        eventToEvaluate.getOccurredDate() != null
+            ? Instant.Companion.fromEpochMilliseconds(eventToEvaluate.getOccurredDate().getTime())
+            : Instant.Companion.fromEpochMilliseconds(eventToEvaluate.getScheduledDate().getTime()),
+        eventToEvaluate.getScheduledDate() == null
+            ? null
+            : LocalDateTime.Companion.parse(
+                    DateUtils.getIso8601NoTz(eventToEvaluate.getScheduledDate()))
+                .getDate(),
+        eventToEvaluate.getCompletedDate() == null
+            ? null
+            : LocalDateTime.Companion.parse(
+                    DateUtils.getIso8601NoTz(eventToEvaluate.getCompletedDate()))
+                .getDate(),
         orgUnit,
         orgUnitCode,
         eventToEvaluate.getEventDataValues().stream()
@@ -486,15 +280,16 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
             .filter(dv -> dv.getValue() != null)
             .map(
                 dv ->
-                    RuleDataValue.create(
-                        ObjectUtils.defaultIfNull(
-                            eventToEvaluate.getOccurredDate(), eventToEvaluate.getScheduledDate()),
+                    new RuleDataValue(
+                        eventToEvaluate.getOccurredDate() != null
+                            ? Instant.Companion.fromEpochMilliseconds(
+                                eventToEvaluate.getOccurredDate().getTime())
+                            : Instant.Companion.fromEpochMilliseconds(
+                                eventToEvaluate.getScheduledDate().getTime()),
                         eventToEvaluate.getProgramStage().getUid(),
                         dv.getDataElement(),
                         dv.getValue()))
-            .collect(Collectors.toList()),
-        eventToEvaluate.getProgramStage().getName(),
-        ObjectUtils.defaultIfNull(eventToEvaluate.getCompletedDate(), null));
+            .toList());
   }
 
   // ---------------------------------------------------------------------
@@ -528,19 +323,18 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
 
     Rule rule;
     try {
-      ruleActions =
-          programRuleActions.stream().map(this::toRuleAction).collect(Collectors.toList());
-
+      ruleActions = programRuleActions.stream().map(this::toRuleAction).toList();
       rule =
-          Rule.create(
+          new Rule(
+              programRule.getCondition(),
+              ruleActions,
+              programRule.getUid(),
+              programRule.getName(),
               programRule.getProgramStage() != null
                   ? programRule.getProgramStage().getUid()
                   : StringUtils.EMPTY,
-              programRule.getPriority(),
-              programRule.getCondition(),
-              ruleActions,
-              programRule.getName(),
-              programRule.getUid());
+              programRule.getPriority());
+
     } catch (Exception e) {
       log.debug("Invalid rule action in ProgramRule: " + programRule.getUid());
 
@@ -550,35 +344,223 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
     return rule;
   }
 
-  private RuleAction toRuleAction(ProgramRuleAction programRuleAction) {
-    return ACTION_MAPPER
-        .getOrDefault(
-            programRuleAction.getProgramRuleActionType(),
-            pra ->
-                RuleActionAssign.create(pra.getContent(), pra.getData(), getAssignedParameter(pra)))
-        .apply(programRuleAction);
+  private RuleAction toRuleAction(ProgramRuleAction pra) {
+    return switch (pra.getProgramRuleActionType()) {
+      case DISPLAYTEXT ->
+          new RuleAction(
+              pra.getData(),
+              DISPLAYTEXT.name(),
+              createValues(CONTENT, pra.getContent(), LOCATION, pra.getLocation()));
+      case DISPLAYKEYVALUEPAIR ->
+          new RuleAction(
+              pra.getData(),
+              DISPLAYKEYVALUEPAIR.name(),
+              createValues(CONTENT, pra.getContent(), LOCATION, pra.getLocation()));
+      case HIDEFIELD ->
+          new RuleAction(
+              null,
+              HIDEFIELD.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case HIDESECTION ->
+          new RuleAction(
+              null,
+              HIDESECTION.name(),
+              createValues(PROGRAM_STAGE_SECTION, pra.getProgramStageSection().getUid()));
+      case HIDEPROGRAMSTAGE ->
+          new RuleAction(
+              null,
+              HIDEPROGRAMSTAGE.name(),
+              createValues(PROGRAM_STAGE, pra.getProgramStage().getUid()));
+      case ASSIGN ->
+          new RuleAction(
+              pra.getData(),
+              ASSIGN.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case SHOWWARNING ->
+          new RuleAction(
+              pra.getData(),
+              SHOWWARNING.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case WARNINGONCOMPLETE ->
+          new RuleAction(
+              pra.getData(),
+              WARNINGONCOMPLETE.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case SHOWERROR ->
+          new RuleAction(
+              pra.getData(),
+              SHOWERROR.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case ERRORONCOMPLETE ->
+          new RuleAction(
+              pra.getData(),
+              ERRORONCOMPLETE.name(),
+              createValues(
+                  CONTENT,
+                  pra.getContent(),
+                  FIELD,
+                  getAssignedParameter(pra),
+                  ATTRIBUTE_TYPE,
+                  getAttributeType(pra).name()));
+      case CREATEEVENT ->
+          new RuleAction(
+              pra.getData(),
+              CREATEEVENT.name(),
+              createValues(CONTENT, pra.getContent(), LOCATION, pra.getLocation()));
+      case SETMANDATORYFIELD ->
+          new RuleAction(
+              null,
+              SETMANDATORYFIELD.name(),
+              createValues(
+                  FIELD, getAssignedParameter(pra), ATTRIBUTE_TYPE, getAttributeType(pra).name()));
+      case SENDMESSAGE ->
+          new RuleAction(
+              pra.getData(), SENDMESSAGE.name(), createValues(NOTIFICATION, pra.getTemplateUid()));
+      case SCHEDULEMESSAGE ->
+          new RuleAction(
+              pra.getData(),
+              SCHEDULEMESSAGE.name(),
+              createValues(NOTIFICATION, pra.getTemplateUid()));
+      case HIDEOPTION ->
+          new RuleAction(null, HIDEOPTION.name(), createValues(FIELD, getAssignedParameter(pra)));
+      case SHOWOPTIONGROUP ->
+          new RuleAction(
+              null, SHOWOPTIONGROUP.name(), createValues(FIELD, getAssignedParameter(pra)));
+      case HIDEOPTIONGROUP ->
+          new RuleAction(
+              null, HIDEOPTIONGROUP.name(), createValues(FIELD, getAssignedParameter(pra)));
+    };
   }
 
-  private RuleVariable toRuleVariable(ProgramRuleVariable programRuleVariable) {
-    RuleVariable ruleVariable = null;
+  private Map<String, String> createValues(@Nonnull String key1, @Nullable String value1) {
+    Map<String, String> values = new HashMap<>();
 
-    try {
-      if (VARIABLE_MAPPER.containsKey(programRuleVariable.getSourceType())) {
-        ruleVariable =
-            VARIABLE_MAPPER.get(programRuleVariable.getSourceType()).apply(programRuleVariable);
-      }
-    } catch (Exception e) {
-      log.debug("Invalid ProgramRuleVariable: " + programRuleVariable.getUid());
+    if (value1 != null) {
+      values.put(key1, value1);
     }
 
-    return ruleVariable;
+    return values;
+  }
+
+  private Map<String, String> createValues(
+      @Nonnull String key1,
+      @Nullable String value1,
+      @Nonnull String key2,
+      @Nullable String value2) {
+    Map<String, String> values = createValues(key1, value1);
+
+    if (value2 != null) {
+      values.put(key2, value2);
+    }
+
+    return values;
+  }
+
+  private Map<String, String> createValues(
+      @Nonnull String key1,
+      @Nullable String value1,
+      @Nonnull String key2,
+      @Nullable String value2,
+      @Nonnull String key3,
+      @Nullable String value3) {
+    Map<String, String> values = createValues(key1, value1, key2, value2);
+
+    if (value3 != null) {
+      values.put(key3, value3);
+    }
+
+    return values;
+  }
+
+  private RuleVariable toRuleVariable(ProgramRuleVariable prv) {
+    return switch (prv.getSourceType()) {
+      case DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE ->
+          new RuleVariableNewestStageEvent(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              getOptions(prv),
+              prv.getDataElement().getUid(),
+              toMappedValueType(prv),
+              prv.getProgramStage().getUid());
+      case DATAELEMENT_NEWEST_EVENT_PROGRAM ->
+          new RuleVariableNewestEvent(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              getOptions(prv),
+              prv.getDataElement().getUid(),
+              toMappedValueType(prv));
+      case DATAELEMENT_CURRENT_EVENT ->
+          new RuleVariableCurrentEvent(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              getOptions(prv),
+              prv.getDataElement().getUid(),
+              toMappedValueType(prv));
+      case DATAELEMENT_PREVIOUS_EVENT ->
+          new RuleVariablePreviousEvent(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              getOptions(prv),
+              prv.getDataElement().getUid(),
+              toMappedValueType(prv));
+      case CALCULATED_VALUE ->
+          new RuleVariableCalculatedValue(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              List.of(),
+              prv.getUid(),
+              toMappedValueType(prv));
+      case TEI_ATTRIBUTE ->
+          new RuleVariableAttribute(
+              prv.getName(),
+              prv.getUseCodeForOptionSet(),
+              getOptions(prv),
+              prv.getAttribute().getUid(),
+              toMappedValueType(prv));
+    };
   }
 
   private RuleValueType toMappedValueType(ProgramRuleVariable programRuleVariable) {
     ValueType valueType =
-        VALUE_TYPE_MAPPER
-            .getOrDefault(programRuleVariable.getSourceType(), prv -> ValueType.TEXT)
-            .apply(programRuleVariable);
+        switch (programRuleVariable.getSourceType()) {
+          case DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE,
+                  DATAELEMENT_PREVIOUS_EVENT,
+                  DATAELEMENT_NEWEST_EVENT_PROGRAM,
+                  DATAELEMENT_CURRENT_EVENT ->
+              programRuleVariable.getDataElement().getValueType();
+          case CALCULATED_VALUE -> programRuleVariable.getValueType();
+          case TEI_ATTRIBUTE -> programRuleVariable.getAttribute().getValueType();
+        };
 
     if (valueType.isBoolean()) {
       return RuleValueType.BOOLEAN;
@@ -607,6 +589,32 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
     return AttributeType.UNKNOWN;
   }
 
+  private DataItem getDescription(ProgramRuleVariable prv) {
+    return switch (prv.getSourceType()) {
+      case DATAELEMENT_NEWEST_EVENT_PROGRAM_STAGE,
+              DATAELEMENT_PREVIOUS_EVENT,
+              DATAELEMENT_NEWEST_EVENT_PROGRAM,
+              DATAELEMENT_CURRENT_EVENT ->
+          new DataItem(
+              ObjectUtils.firstNonNull(
+                  prv.getDataElement().getDisplayFormName(),
+                  prv.getDataElement().getFormName(),
+                  prv.getDataElement().getName()),
+              getItemValueType(prv.getDataElement().getValueType()));
+      case CALCULATED_VALUE ->
+          new DataItem(
+              ObjectUtils.firstNonNull(prv.getDisplayName(), prv.getName()),
+              getItemValueType(prv.getValueType()));
+      case TEI_ATTRIBUTE ->
+          new DataItem(
+              ObjectUtils.firstNonNull(
+                  prv.getAttribute().getDisplayName(),
+                  prv.getAttribute().getDisplayFormName(),
+                  prv.getAttribute().getName()),
+              getItemValueType(prv.getAttribute().getValueType()));
+    };
+  }
+
   private String getAssignedParameter(ProgramRuleAction programRuleAction) {
     if (programRuleAction.hasDataElement()) {
       return programRuleAction.getDataElement().getUid();
@@ -627,36 +635,6 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
             programRuleAction.getProgramRule().getUid()));
 
     return StringUtils.EMPTY;
-  }
-
-  private RuleAction getLocationBasedDisplayRuleAction(ProgramRuleAction programRuleAction) {
-    if (ProgramRuleActionType.DISPLAYTEXT.equals(programRuleAction.getProgramRuleActionType())) {
-      if (LOCATION_FEEDBACK.equals(programRuleAction.getLocation())) {
-        return RuleActionDisplayText.createForFeedback(
-            programRuleAction.getContent(), programRuleAction.getData());
-      }
-
-      if (LOCATION_INDICATOR.equals(programRuleAction.getLocation())) {
-        return RuleActionDisplayText.createForIndicators(
-            programRuleAction.getContent(), programRuleAction.getData());
-      }
-
-      return RuleActionDisplayText.createForFeedback(
-          programRuleAction.getContent(), programRuleAction.getData());
-    } else {
-      if (LOCATION_FEEDBACK.equals(programRuleAction.getLocation())) {
-        return RuleActionDisplayKeyValuePair.createForFeedback(
-            programRuleAction.getContent(), programRuleAction.getData());
-      }
-
-      if (LOCATION_INDICATOR.equals(programRuleAction.getLocation())) {
-        return RuleActionDisplayKeyValuePair.createForIndicators(
-            programRuleAction.getContent(), programRuleAction.getData());
-      }
-
-      return RuleActionDisplayKeyValuePair.createForFeedback(
-          programRuleAction.getContent(), programRuleAction.getData());
-    }
   }
 
   private String getTrackedEntityAttributeValue(TrackedEntityAttributeValue attributeValue) {
@@ -688,17 +666,6 @@ public class DefaultProgramRuleEntityMapperService implements ProgramRuleEntityM
 
     // default
     return ItemValueType.TEXT;
-  }
-
-  private DataItem getDisplayName(ProgramRuleVariable prv) {
-    DataElement dataElement = prv.getDataElement();
-
-    return DataItem.builder()
-        .value(
-            ObjectUtils.firstNonNull(
-                dataElement.getDisplayFormName(), dataElement.getFormName(), dataElement.getName()))
-        .valueType(getItemValueType(dataElement.getValueType()))
-        .build();
   }
 
   private List<Option> getOptions(ProgramRuleVariable prv) {
